tests/compile-fail/generated/derives-span-Default-struct.stderr
error[E0277]: the trait bound `Error: std::default::Default` is not satisfied
  --> $DIR/derives-span-Default-struct.rs:15:5
   |
15 |     x: Error
   |     ^^^^^^^^ the trait `std::default::Default` is not implemented for `Error`
   |
   = note: required by `std::default::Default::default`
